# packages/server/docs/swagger.json
@@ -540,7 +540,14 @@
                         "required": true
                     }
                 ],
-                "responses": {}
+                "responses": {
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/helpers.ErrorResponse"
+                        }
+                    }
+                }
             }
         },
         "/songs/{id}": {
@@ -875,6 +882,20 @@
                 },
                 "username": {
                     "type": "string"
+                }
+            }
+        },
+        "helpers.ErrorResponse": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "integer"
                 }
             }
         },
